--- a/w03d04/starter/package.json
+++ b/w03d04/starter/package.json
@@ -8,7 +8,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cookie-parser": "^1.4.7",
+    "bcryptjs": "^2.4.3",
+    "cookie-session": "^2.1.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "morgan": "^1.9.1"
